5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1807_2564.log
== TEST (2019-06-06 16:52:59) 
-- CODE:
from numpy import*

gols = array(eval(input("A: "))
golsadv = array(eval(input("B: "))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- ERROR:
File "XXXX", line 4
    golsadv = array(eval(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:10) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:30) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:56:27) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
33.1326
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
A: B: [7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[0 0 9]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:56:36) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
44.0186
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
A: B: [7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:56:36) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
89.154
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:56:47) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
72.8278
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:56:47) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
89.6476
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[12  1  0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:08:58) 
-- CODE:
from numpy import*

gols = array(eval(input("A: ")))
golsadv = array(eval(input("B: ")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
1.16675
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
